--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -3,6 +3,7 @@
 /node_modules
 /.pnp
 .pnp.js
+/src/config/Keys.js
 
 # testing
 /coverage
@@ -21,4 +22,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/config/keys
