--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:dev": "concurrently \"nodemon --ignore 'frontend/*'\" \"npm run frontend\"",
     "frontend": "cd frontend && npm run start",
     "install": "cd frontend && npm install",
-    "build": "cd frontend && npm run build"
+    "build": "cd frontend && npm run build",
+    "heroku-postbuild": "npm run install && npm run build"
   },
   "author": "JAY",
   "license": "ISC",
