--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "begin": "npm run build && node app.js",
     "start": "node app.js",
-    "start:original": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node app.js",
-    "start:dev": "concurrently \"nodemon --ignore 'frontend/*'\" \"npm run frontend\"",
-    "frontend": "cd frontend && npm run start",
-    "install": "cd frontend && npm install",
-    "build": "cd frontend && npm run build",
-    "heroku-postbuild": "npm run install && npm run build"
+    "server": "nodemon app.js",
+    "debug": "node --inspect app.js",
+    "frontend-install": "npm install --prefix frontend",
+    "frontend": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
-  "author": "JAY",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
