--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coinface",
   "version": "1.0.0",
-  "description": "",
+  "description": "Coinbase imitation website built with MERN stack",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -9,9 +9,10 @@
     "debug": "node --inspect app.js",
     "frontend-install": "npm install --prefix frontend",
     "frontend": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\""
+    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "",
+  "author": "Jay",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
